--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <header class="cabecalho">
     <div class="container">
         <img src="imagens/responsividade.png" alt="icone-responsivo" class="container__img">
-        <h1 class="container__titulo"><b>Luiz Kaick,Yummi</b></h1>
+        <h1 class="container__titulo"><b>Victor</b></h1>
         <p class="container__frase">
             Estamos em um mundo coletivo, mas você é <i>único!</i>
         </p>
